# amandag-old

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  deploy.sh  index.php  rustfmt.toml  style.css
src/: article.rs  auth.rs  captcha.rs  cgi.rs  comment.rs  db.rs  error.rs  lib.rs  lib.rs.bak  main.rs  post.rs  strings.rs
src/handler/: comment.rs  file.rs  index.rs  login.rs  logout.rs  mod.rs  signup.rs  submit.rs  view.rs
src/web/: about.html  captcha.html  comment-form.html  comment-list.html  comment.html  guest-info.html  http-headers  index.html  login.html  post.html  signup.html  style.css  submit.html  user-info.html  view-head.html  view.html  view.js
