[package]
name = "amandag"
version = "0.3.0"
authors = ["Amanda P. Graven <amanda@amandag.net>"]

[profile.release]
lto = true

[dependencies]
error-chain = "0.11"
futures = "0.1"
hoedown = "6.0.0"
hyper = "0.11"
hyper-tls = "0.1.2"
mime = "0.3"
mysql = "12.0.1"
rand = "0.3"
rust-crypto = "0.2"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
time = "*"
tokio-core = "0.1"
url = "1.5.1"
