[package]
name = "amandag"
version = "0.4.0"
authors = ["Amanda P. Graven <amanda@amandag.net>"]
homepage = "https://amandag.net"
repository = "https://github.com/agraven/amandag"
readme = "README.md"
categories = ["web-programming"]
license = "AGPL-3.0"

[profile.release]
lto = true

[dependencies]
futures = "0.1"
gotham = "0.2.0"
gotham_derive = "0.2.0"
hoedown = "6.0.0"
hyper = "0.11"
hyper-tls = "0.1.2"
lazy_static = "1.1.0"
mime = "0.3"
mysql = "12.3.0"
native-tls = "0.1"
rand = "0.3"
reqwest = "*"
rust-crypto = "0.2"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
time = "*"
tree_magic = "0.2.0"
tokio-core = "0.1"
url = "1.5.1"
